Fix icon spacing on mobile

--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -221,6 +221,6 @@ hr {
 
 @media only screen and (max-width: 640px) {
   .label svg {
-    margin-top: 0.1rem;
+    margin-top: 0.06rem;
   }
 }
